﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v5.3.1:
~~~~~~~~~

- KGySoft.Drawing.Imaging namespace:
====================================
- BitmapDataFactory class:
  - BeginLoad/LoadAsync methods: They didn't use the specified async configuration.
- BitmapDataExtensions class:
  - Clear/BeginClear/ClearAsync methods: They could throw a NullReferenceException if a custom IWritableBitmapData
    instance had indexed PixelFormat but its Palette was null. From now on even such bitmap data can be cleared but
    the specified color will be ignored and the data is always cleared with zero palette index.


~~~~~~~~~
! v5.3.0:
~~~~~~~~~

* KGySoft.Drawing namespace:
============================
* BitmapExtensions class:
  - Resize method (with ScalingMode overload): fixing some interpolated resizing glitches in edge cases
  * GetColors/GetColorCount methods: Improving performance
* Icons class:
  * The shadow mask of Icon resources have been changed so they appear better when displayed on a display or
    operating system with no alpha gradient support.
* ImageExtensions class:
  + New BeginConvertPixelFormat/EndConvertPixelFormat methods
  + New ConvertPixelFormatAsync methods (on .NET 4.0 and above)
  + New ToIcon overload with ScalingMode parameter
  - ConvertPixelFormat methods: Setting ColorPalette.Flags of the result Bitmap correctly. In Mono/Linux it could
    happen that the result Bitmap had alpha palette entries but the bitmap wasn't rendered with alpha colors.
+ New IAsyncContext interface
+ New IDrawingProgress interface
+ New DrawingProgress struct
+ New AsyncConfig class
+ New TaskConfig class (on .NET 4.0 and above)

! KGySoft.Drawing.Imaging namespace:
====================================
! OptimizedPaletteQuantizer class:
  ! MedianCut method: The generated palette can be different from the ones in the previous versions: for large